lrcall/tests/compile_fail/serde1/deprecated.rs
#![deny(warnings)]

#[lrcall::service(derive_serde = true)]
trait Foo {
    async fn foo();
}

fn main() {}
